clusters/k8s-01/apps/security/openbao/configs/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: openbao
spec:
  hostnames:
    - openbao.k8s-01.suslian.engineer
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: kube-system
      sectionName: https-k8s-01
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: openbao-active
          port: 8200
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
